# equiquant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DATABASE.md  Makefile  Procfile  README.md  ROADMAP_TO_EXCELLENCE.md  analyze.py  config.py  pyproject.toml  test_export.csv  test_proxy_rotation.py  tickers.txt
.agents/agents/: quant-architect.md
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.gemini/agents/: quant-architect.md  report-analyst.md
.github/: copilot-instructions.md
core/: api.py  data.py  evaluation.py  logger.py  metrics.py  openbb_client.py  orchestrator.py  profiles.py  schema.py  scorers.py  stats.py
core/analysis/: constituents.py  indices.py  preprocessing.py  relative.py  reporting_expert.py
core/api/: __init__.py  deps.py  models.py
core/database/: manager.py  migrations.py  repository.py  seeder.py
core/providers/: base.py  fred_provider.py  mappings.py  openbb_provider.py  sec_provider.py
core/reporting/: base.py  csv_reporter.py  factory.py  txt_reporter.py
core/ui/: database.py  terminal.py
core/utils/: formatters.py  market.py  rate_limit.py  sec.py
docs/: DATABASE.md  FRONTEND.md  PROVIDERS.md  PROXY_SETUP.md  QUANT_REPORT.md  SCANNING.md  architecture.md  benchmarks.md  caching.md  configuration.md  etf_scraping.md  logging.md  multiprocess_logging.md  pre-commit.md  report_analyst_instructions.md  report_analyst_spec.md  scoring.md  shared-cooldown.d2  subagents.md  telemetry.md  testing.md
report-analyst/: Alpha_Briefing_NASDAQ100_20260504.md
reports/: NASDAQ100_20260504_222940.csv  NASDAQ100_20260507_221717.csv  NASDAQ100_20260507_233828.csv  NVDA_20260430_232102.csv  QQQ_20260502_232801.csv  VOO_20260430_232644.csv  VOO_20260501_133132.csv  XME_20260508_002232.csv  growth_full_report.csv  nasdaq100.csv  portfolio_4_20260504_221124.csv  portfolio_4_20260504_221545.csv  portfolio_515_20260501_192944.csv  portfolio_515_20260501_220210.csv  portfolio_515_20260502_095353.csv  qqq_top10.csv  report.csv  report.txt  schd_top10.csv  voo.csv  voo_top10.csv
reports-analyst/: briefing_NASDAQ100_20260507_233828.md  briefing_SUCCESS_TEST.md  briefing_XME_20260508_002232.md  briefing_XME_FINAL_VERIFICATION.md  briefing_XME_TRACE_TEST.md  briefing_report.md
scratch/: convert_trades.py
scripts/: backup.sh  db_inspect.py  migrate_benchmark_versioning.py  migrate_benchmarks.py  migrate_financial_statements_schema.py  migrate_raw_provider_data.py  restore.sh  run_sp500.py  test_e2e_fetch.py  test_report_analyst.py  update_sector_benchmarks.py
scripts/completions/: _analyze  analyze.bash
seeds/: app_settings.json  assets.json  global_benchmarks.json  index_constituents.json  indices.json  investor_profiles.json  profile_metric_settings.json  sector_benchmarks.json  stock_groups.json
tests/: README.md  conftest.py  debug_raw_data.py  test_cli.py  test_constituents.py  test_etf_scrapers.py  test_fetching_logic.py  test_indices.py  test_logic.py  test_reporting_factory.py  test_stats.py  test_versioning.py
tests/acceptance/: test_server_startup.py  test_smoke.py
tests/integration/: test_api_export.py  test_database.py  test_integration.py  test_versioning.py
tests/ui/: ui_layout.spec.ts
tests/unit/: test_adaptive_probing.py  test_analysis.py  test_api.py  test_api_analyze.py  test_api_fetch.py  test_asset_merge.py  test_benchmarks.py  test_cache_hit_bug.py  test_cli.py  test_constituents.py  test_fred_provider.py  test_hybrid_orchestrator.py  test_logger.py  test_logging_noise.py  test_logic.py  test_market.py  test_metrics_registry.py  test_migrations.py  test_openbb_client.py  test_penalty_logic.py  test_portfolio.py  test_profiles.py  test_progressive_backoff.py  test_proxy.py  test_rate_limit.py  test_raw_provider_data.py  test_reporting.py  test_scalability.py  (+10 more)
ui/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
(+65 files in other folders)
