[project]
name = "equiquant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
	"pandas>=3.0.2",
	"python-dotenv>=1.2.2",
	"requests>=2.33.1",
	"yfinance>=1.3.0",
	"rich>=13.9.4",
	"openbb-core>=1.6.0",
	"openbb-yfinance>=1.6.2",
	"openbb-equity>=1.6.1",
	"openbb-etf>=1.6.1",
	"fastapi>=0.128.8",
	"uvicorn>=0.40.0",
	"nodejs-wheel>=23.6.1",
	"sse-starlette>=3.4.4",
	"honcho>=2.0.0",
	"setproctitle>=1.3.7",
]

[tool.ruff]
# Target version for your Python environment
target-version = "py311"

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"

[tool.ruff.lint]
# Enable Pyflakes (F), Error (E), and Implicit String Concatenation (ISC)
select = ["F", "E", "ISC", "I", "C901"]
# E501 is the "Line too long" rule. Adding it here kills the warning.
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-implicit-str-concat]
# Ensure it catches multi-line implicit concatenations
allow-multiline = false

[lint.isort]
combine-as-imports = true

[dependency-groups]
dev = [
	"coverage>=7.13.5",
	"pytest>=9.0.3",
	"pytest-cov>=7.1.0",
	"pytest-mock>=3.15.1",
	"ruff>=0.15.11",
	"pre-commit>=4.0.0",
	"httpx>=0.28.1",
	"semgrep>=1.162.0",
	"bandit[toml]>=1.9.4",
	"watchfiles>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "slow: marks tests that take more than a few seconds (OpenBB import, real server startup)",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"] # Skip B101 (assert) as it is common in this project style for validation logic.
